cabal-version: 2.2

name:         poly-parse
version:      0.1.0.0
synopsis:     Experimental parsing techniques
description:  Alien parsing through mathematics to get reasonable parsing
bug-reports:  https://github.com/riz0id/poly-source/issues
license:      BSD-3-Clause
license-file: LICENSE
author:       Jacob Leach
maintainer:   jacob@z-tech.org
copyright:    Copyright (C) 2020-2022 Jacob D. Leach
category:     Poly
build-type:   Simple

tested-with:
  GHC == 8.8.3

extra-source-files:
  README.md
  CHANGELOG.md
  LICENSE

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import:           common
  hs-source-dirs:   src
  default-language: Haskell2010

  exposed-modules:
      Control.Effect.Parser
    , Control.Carrier.Parser
    , Data.Parser.Input
    , Data.Parser.Err

  build-depends:
      base               >= 4.13 && <4.14
    , comonad            >= 5.0.6
    , containers >= 0.6.2.1
    , fused-effects      >= 1.0.2.0
    , fused-effects-lens
    , lens               >= 4.19.2
    , poly-source        >= 0.1.0.0
    , prettyprinter      ^>= 1.5
    , prettyprinter-ansi-terminal ^>= 1.1
    , profunctors        >= 5.5.2
